--- a/ui5-mock.yaml
+++ b/ui5-mock.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "2.5"
 metadata:
-  name: NAMESPACE.zcashclose
+  name: GASS.zcashclose
 type: application
 server:
   customMiddleware:
