--- a/ui5.yaml
+++ b/ui5.yaml
@@ -2,7 +2,7 @@
 
 specVersion: "2.5"
 metadata:
-  name: NAMESPACE.zcashclose
+  name: GASS.zcashclose
 type: application
 server:
   customMiddleware:
@@ -28,5 +28,5 @@ server:
     - name: fiori-tools-preview
       afterMiddleware: fiori-tools-appreload
       configuration:
-        component: NAMESPACE.zcashclose
+        component: GASS.zcashclose
         ui5Theme: sap_fiori_3
