--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -1,7 +1,7 @@
 {
   "_version": "1.28.0",
   "sap.app": {
-    "id": "NAMESPACE.zcashclose",
+    "id": "GASS.zcashclose",
     "type": "application",
     "i18n": "i18n/i18n.properties",
     "applicationVersion": {
@@ -61,7 +61,7 @@
       "i18n": {
         "type": "sap.ui.model.resource.ResourceModel",
         "settings": {
-          "bundleName": "NAMESPACE.zcashclose.i18n.i18n"
+          "bundleName": "GASS.zcashclose.i18n.i18n"
         }
       },
       "": {
@@ -77,7 +77,7 @@
       "config": {
         "routerClass": "sap.m.routing.Router",
         "viewType": "XML",
-        "viewPath": "NAMESPACE.zcashclose.view",
+        "viewPath": "GASS.zcashclose.view",
         "controlId": "app",
         "controlAggregation": "pages",
         "transition": "slide",
@@ -141,7 +141,7 @@
       }
     },
     "rootView": {
-      "viewName": "NAMESPACE.zcashclose.view.App",
+      "viewName": "GASS.zcashclose.view.App",
       "type": "XML",
       "async": true,
       "id": "app"
