correccion de configuracion de deploy

--- a/ui5-deploy.yaml
+++ b/ui5-deploy.yaml
@@ -18,6 +18,6 @@ builder:
           client: "100"
         app:
           name: ZCASHCLOSE
-          description: Fori app to cash closing operations
+          description: Cierre de caja
           package: ZISH
-          transport: DG1K902310
+          transport: DG1K903378
