--- a/ui5-deploy.yaml
+++ b/ui5-deploy.yaml
@@ -17,7 +17,7 @@ builder:
           url: http://10.2.8.124:8000
           client: "100"
         app:
-          name: ZCASHCLOSE
+          name: GASS.ZCASHCLOSE
           description: Cierre de caja
           package: ZISH
-          transport: DG1K903378
+          transport: DG1K904928
